TU TONTOH HE EXO ESHTO

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primera clase de git</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <h6>Hello world</h6>
+    <div id="diego-button" class="container">
+        Saludar a Diego
+    </div>
+
+    <span class="container mt-1">
+        Te he saludado <span id="diego-contador" class="container contador">0</span> veces
+    </span>
+
+    
+
+    <script src="js/main.js" defer></script>
 </body>
 
 </html>
